Fixed bottom menubar alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,7 +109,6 @@ textarea {
     bottom:0px; /* Changed later in js */
     left:0px;
     width:100%;
-    height:10px;
     transform: translateY(-50%);
 }
 
